# streamlit-aggrid-redux

./: .editorconfig  .gitignore  LICENSE  README.md  packages.json  pyproject.toml  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
streamlit_aggrid_redux/: __init__.py  code.py  errors.py  grid_builder.py  grid_options_builder.py  grid_return.py  html.py  types.py  version.py
streamlit_aggrid_redux/frontend/: .env  package.json  tsconfig.json
streamlit_aggrid_redux/frontend/public/: index.html
streamlit_aggrid_redux/frontend/src/: AgGrid.tsx  ag-theme-excel.css  ag-theme-excel.min.css  ag-theme-streamlit.css  ag-theme-streamlit.min.css  agGridStyle.scss  formatters.js  index.tsx  utils.js
