[tool.poetry]
name = "streamlit-aggrid-redux"
version = "2023.10"
description = "Reimplementation of ag-grid component for streamlit"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
homepage = "https://github.com/jwood983/streamlit-aggrid-redux"
authors = [
    "JD Wood <j.d.wood83@gmail.com>"
]
readme = "README.md"
exclude = ["**/node_modules/**/*", "**/frontend/src/**/*", "**/.yarn/**/*"]
include = ["**/frontend/build/**/*"]
packages = [{include="streamlit_aggrid_redux"}]

[tool.poetry.dependencies]
python = ">=3.10"
streamlit = ">=1.27"
pandas = ">=1.2"
pyarrow = ">=11.0"
python-decouple = "^3.8"

[tool.poetry.dev-dependencies]
black = "*"
watchdog = "^2.1.9"

[build-system]  
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
